--- a/app/templates/components/user_permissions_modal.html
+++ b/app/templates/components/user_permissions_modal.html
@@ -97,22 +97,13 @@
                         <label for="can_request_tv" class="ml-2 text-sm text-gray-700">Can request TV shows</label>
                     </div>
                     
-                    <div class="flex items-center">
-                        <input 
-                            type="checkbox" 
-                            name="can_request_4k" 
-                            id="can_request_4k"
-                            {% if user_permissions and user_permissions.can_request_4k %}checked{% endif %}
-                            class="h-4 w-4 text-blue-600 border-gray-300 rounded"
-                        >
-                        <label for="can_request_4k" class="ml-2 text-sm text-gray-700">Can request 4K content</label>
-                    </div>
                     
                     <div class="flex items-center">
                         <input 
                             type="checkbox" 
                             name="can_view_other_users_requests" 
                             id="can_view_other_users_requests"
+                            value="true"
                             {% if user_permissions and user_permissions.get_custom_permissions().get('can_view_other_users_requests') %}checked{% endif %}
                             class="h-4 w-4 text-blue-600 border-gray-300 rounded"
                         >
@@ -124,6 +115,7 @@
                             type="checkbox" 
                             name="can_see_requester_username" 
                             id="can_see_requester_username"
+                            value="true"
                             {% if user_permissions and user_permissions.get_custom_permissions().get('can_see_requester_username') %}checked{% endif %}
                             class="h-4 w-4 text-blue-600 border-gray-300 rounded"
                         >
